[package]
name = "kinesis-crowbar"
version = "0.1.0"
authors = ["ROki1988 <roki.swindler@gmail.com>"]

[lib]
name = "lambda"
crate-type = ["cdylib"]

[dependencies]
crowbar = "0.2"
cpython = "0.1"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
data-encoding = "2.1.0"
rayon = "0.9"
rusoto_core = "0.29.0"
rusoto_s3 = "0.29.0"